services/media-services/radarr/resources/deployment-radarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media-radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
              name: radarr
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media
          persistentVolumeClaim:
            claimName: radarr-media
        - name: downloads
          persistentVolumeClaim:
            claimName: radarr-downloads
