services/media-services/radarr/resources/service-radarr.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-radarr
spec:
  ports:
    - name: radarr
      port: 7878
      targetPort: 7878
  selector:
    app: radarr
