services/media-services/radarr/resources/ingress-radarr.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media-radarr
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`radarr.nebulanet.xyz`)
      kind: Rule
      services:
        - name: radarr
          kind: Service
          port: 7878
  tls:
    secretName: radarr-tls
